--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,18 @@ pytest = "^8.3.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+python_version = "3.12"
+disallow_untyped_defs = true
+warn_return_any = true
+exclude = "venv"
+
+[tool.isort]
+line_length = 119
+
+[tool.black]
+line-length = 119
+exclude = '''
+^\.git
+'''
